[tool.poetry]
name = "repl_python3_ValorantNewsBot"
version = "0.1.0"
description = ""
authors = ["Crazychicken442 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
praw = "^7.3.0"
Flask = "^2.0.1"
schedule = "^1.1.0"
asyncpraw = "^7.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
