[tool.poetry]
name = "lib"
version = "0.1.0"
description = ""
authors = ["Ajay Bhatia <ajbhatia@ucsc.edu>"]

[tool.poetry.dependencies]
python = "^3.9.2"
async_generator = "^1.10"
asyncio_extras = "^1.3.2"
asyncpraw = "^7.5.0"
praw = "^7.6.0"
discord = "^1.7.3"
Flask = "^2.1.2"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
